Fix broken style for long stage name

--- a/app/assets/stylesheets/startups/startups.scss
+++ b/app/assets/stylesheets/startups/startups.scss
@@ -309,7 +309,7 @@
           padding: 0 0 2px;
 
           a {
-            padding: 10px;
+            padding: 10px 9px;
             vertical-align: -1px;
             display: inline-block;
             line-height: 20px;
